# gfal2

./: CMakeLists.txt  DESCRIPTION  Makefile.am  Makefile.in  README  RELEASE-NOTES  SConstruct  TODO  VERSION  aclocal.m4  build.xml  configure  configure.ac  generate_tests.sh  myautogen.sh  package_generator.sh
SConsAddons/: ArgumentUtils.py  AutoDist.py  EnvironmentBuilder.py  ReleaseDebugConfig.py  install_commands.py  symlink.py  version_commands.py
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: Doxyfile
doc/diagrams/: gfal_access.dia  gfal_access.dia~  gfal_diagram.dia  gfal_diagram.dia~  surls_get_endpoint_activity_diagram.dia
doc/src/: API_CHANGE2.0.c  COMMON_API.c  FAQ.c  LFC_LOW_LEVEL_API.c  LRC_LOW_API.c  POSIX_API.c  SFN_LOW_LEVEL_API.c  SRM_API.c  mainpage.c
project/: build.number  build.properties  configure  configure.properties.xml  e-c_org.glite.data.gfal-py25.ini  e-c_org.glite.data.gfal.ini  glite-data-gfal.spec  glite-data-gfal.spec.template  properties.xml  publish-to-web  version.properties
scons_mods/: changelog_utils.py
src/: CMakeLists.txt  CuTest.h  Makefile.Linux  Makefile.Solaris  Makefile.am  Makefile.in  README  SConscript  VERSION  checkprotolib.c  configure  cycles.xsl  edg-local-replica-catalog.h  edg-local-replica-catalog.wsdl  edg-replica-metadata-catalog.h  edg-replica-metadata-catalog.wsdl  edg_local_replica_catalogSoapBinding.h  edg_replica_metadata_catalogSoapBinding.h  gfal.c  gfal.h  gfal.i  gfal.man  gfal.python.i  gfal_ConvTest.c  gfal_Tests.c  gfal_abortfiles.man  gfal_abortfiles_python.man  gfal_abortrequest.man  gfal_abortrequest_python.man  gfal_api.h  gfal_base.h  gfal_checksum.c  gfal_constants.h  gfal_creat.man  gfal_creat_python.man  gfal_deletesurls.man  gfal_deletesurls_python.man  gfal_file.c  gfal_get.man  gfal_get_ids.man  (+86 more)
src/autogen/: config.h.in  config.h.in~
src/common/: checkprotolib.c  gfal_common.c  gfal_common.h  gfal_common_all.c  gfal_common_catalog.c  gfal_common_catalog.h  gfal_common_dir_handle.c  gfal_common_dir_handle.h  gfal_common_errverbose.c  gfal_common_errverbose.h  gfal_common_file_handle.c  gfal_common_filedescriptor.c  gfal_common_filedescriptor.h  gfal_common_guid.c  gfal_common_guid.h  gfal_common_interface.c  gfal_common_interface.h  gfal_common_internal.h  gfal_common_parameter.c  gfal_common_parameter.h  gfal_common_plugin.c  gfal_common_plugin.h  gfal_common_plugin_interface.h  gfal_common_srm.c  gfal_common_srm.h  gfal_common_srm_access.c  gfal_common_srm_access.h  gfal_common_srm_internal_layer.c  gfal_common_srm_internal_layer.h  gfal_common_srm_mkdir.c  gfal_common_srm_mkdir.h  gfal_common_srm_open.c  gfal_common_srm_open.h  gfal_common_srm_opendir.c  gfal_common_srm_opendir.h  gfal_common_srm_readdir.c  gfal_common_srm_readdir.h  gfal_common_srm_rmdir.c  gfal_common_srm_rmdir.h  gfal_common_srm_stat.c  (+9 more)
src/common/dcap/: gfal_dcap_plugin_bindings.c  gfal_dcap_plugin_bindings.h  gfal_dcap_plugin_layer.c  gfal_dcap_plugin_layer.h  gfal_dcap_plugin_main.c  gfal_dcap_plugin_main.h
src/common/gridftp/: gridftp_checksum_module.cpp  gridftp_ifce_filecopy.cpp  gridftp_plugin_loader.cpp  gridftp_plugin_main.cpp  gridftpmodule.h  gridftpwrapper.cpp
src/common/lfc/: gfal_common_lfc.c  gfal_common_lfc.h  gfal_common_lfc_open.c  gfal_common_lfc_open.h  lfc_ifce.c  lfc_ifce.h  lfc_ifce_ng.c  lfc_ifce_ng.h
src/common/mds/: gfal_common_mds.c  gfal_common_mds.h  gfal_common_mds_layer.c  gfal_common_mds_layer.h  gfal_common_mds_ldap_internal.c  gfal_common_mds_ldap_internal.h  gfal_common_mds_ldap_internal_layer.c  gfal_common_mds_ldap_internal_layer.h  mds_ifce.c
src/common/rfio/: gfal_rfio_plugin_bindings.c  gfal_rfio_plugin_bindings.h  gfal_rfio_plugin_layer.c  gfal_rfio_plugin_layer.h  gfal_rfio_plugin_main.c  gfal_rfio_plugin_main.h
src/common/srm/: gfal_common_srm.c  gfal_common_srm.h  gfal_common_srm_access.c  gfal_common_srm_access.h  gfal_common_srm_checksum.c  gfal_common_srm_checksum.h  gfal_common_srm_chmod.c  gfal_common_srm_chmod.h  gfal_common_srm_copy.c  gfal_common_srm_endpoint.c  gfal_common_srm_endpoint.h  gfal_common_srm_get.c  gfal_common_srm_getput.c  gfal_common_srm_getput.h  gfal_common_srm_getxattr.c  gfal_common_srm_getxattr.h  gfal_common_srm_internal_layer.c  gfal_common_srm_internal_layer.h  gfal_common_srm_mkdir.c  gfal_common_srm_mkdir.h  gfal_common_srm_open.c  gfal_common_srm_open.h  gfal_common_srm_opendir.c  gfal_common_srm_opendir.h  gfal_common_srm_readdir.c  gfal_common_srm_readdir.h  gfal_common_srm_rm.c  gfal_common_srm_rmdir.c  gfal_common_srm_rmdir.h  gfal_common_srm_stat.c  gfal_common_srm_stat.h
src/common/voms/: gfal_voms_if.c  gfal_voms_if.h  gfal_voms_if_layer.c  gfal_voms_if_layer.h
src/file/: gfal2_checksum.c  gfal_file_api.h
src/posix/: gfal_posix.c  gfal_posix_access.c  gfal_posix_api.h  gfal_posix_chmod.c  gfal_posix_close.c  gfal_posix_closedir.c  gfal_posix_getxattr.c  gfal_posix_internal.c  gfal_posix_internal.h  gfal_posix_listxattr.c  gfal_posix_local_file.c  gfal_posix_local_file.h  gfal_posix_lseek.c  gfal_posix_mkdir.c  gfal_posix_ng.c  gfal_posix_open.c  gfal_posix_opendir.c  gfal_posix_parameters.c  gfal_posix_read.c  gfal_posix_readdir.c  gfal_posix_readlink.c  gfal_posix_rename.c  gfal_posix_rmdir.c  gfal_posix_setxattr.c  gfal_posix_stat.c  gfal_posix_symlink.c  gfal_posix_unlink.c  gfal_posix_write.c
src/transfer/: gfal_transfer.h  gfal_transfer_params.cpp  gfal_transfer_types.h  gfal_transfer_types_internal.h
src/transfer/test/: tests_params.cpp
src/version/: gfal_version.c
test/: Makefile  Makefile.am  README  SConscript  catalog_tests.c  execute_tests.sh  generic_configure.sh  getbestfile_tests.c  lfc_configure.sh  setup.sh  srm_configure.sh  test_harness.c  test_helpers.c  test_helpers.h  unit_test.c  unit_test_cgreen.c  unit_test_constants.h  unit_test_util.c
test/regression/: Makefile.am  (+3 more)
test/regression/62445_gfal_open_twice_fails/: 62445_gfal_open_twice_fails.c  62445_gfal_open_twice_fails.py  Makefile.am  README  execute_test.sh
testing/: SConscript
(+110 files in other folders)
