# Copyright (c) Members of the EGEE Collaboration. 2004-2008.
# See http://www.eu-egee.org/partners/ for details on the copyright
# holders.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# org.glite.data.gfal src/Makefile.am
#
# Authors: Paolo Tedesco <paolo.tedesco@cern.ch>
# Version info: $Id: Makefile.am,v 1.23 2009/10/14 09:47:14 szamsu Exp $
# Release: $Name:  $

SOAPCPP2=$(GSOAP_LOCATION)/bin/soapcpp2
SOAPCPP2FLAGS=-c -d/tmp 
#SOAPCPP2FLAGS=-c  
#	-c = generate c code

#WSDL2H=$(GSOAP_LOCATION)/bin/wsdl2h
WSDL2H=$(GSOAP_WSDL2H_LOCATION)/bin/wsdl2h
if USE_GSOAP_2_7_10
WSDL2HFLAGS=-c -e -y -I$(GSOAP_LOCATION)/include -z
else
WSDL2HFLAGS=-c -e -y
endif
#	-c      generate C source code
#	-e      don't qualify enum names
#	-y      generate typedef synonyms for structs and enums

SWIG=$(SWIG_BIN_PATH)/swig -D_LARGEFILE64_SOURCE

#-------------------------------------------------------------------------------
# WDSLs, nsmap files
#-------------------------------------------------------------------------------

# edg-local-replica-catalog.wsdl
#-------------------------------------------------------------------------------
EDG_LOCAL_REPLICA_CATALOG_SOAP_FILES = lrcH.h lrcStub.h urcC.c lrcClient.c edg_local_replica_catalogSoapBinding.nsmap

$(EDG_LOCAL_REPLICA_CATALOG_SOAP_FILES): edg-local-replica-catalog.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p lrc edg-local-replica-catalog.h

edg-local-replica-catalog.h: edg-local-replica-catalog.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -w -t $(top_srcdir)/src/typemap-lrc.dat $< -o $@

# edg-replica-metadata-catalog.wsdl
#-------------------------------------------------------------------------------
EDG_REPLICA_METADATA_CATALOG_SOAP_FILES = rmcH.h rmcStub.h rmcC.c rmcClient.c edg_replica_metadata_catalogSoapBinding.nsmap

$(EDG_REPLICA_METADATA_CATALOG_SOAP_FILES): edg-replica-metadata-catalog.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p rmc edg-replica-metadata-catalog.h

edg-replica-metadata-catalog.h: edg-replica-metadata-catalog.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -w -t $(top_srcdir)/src/typemap-rmc.dat $< -o $@

# srm.v1.1.wsdl
#-------------------------------------------------------------------------------
SRM_V1_1_SOAP_FILES = srmH.h srmStub.h srmC.c srmClient.c ISRM.nsmap

$(SRM_V1_1_SOAP_FILES): srm.v1.1.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p srm srm.v1.1.h

srm.v1.1.h: srm.v1.1.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -w -t $(top_srcdir)/src/typemap-srmv1.dat $< -o $@

# srm.v2.2.wsdl
#-------------------------------------------------------------------------------
SRM_V2_2_SOAP_FILES = srmv2H.h srmv2Stub.h srmv2C.c srmv2Client.c srmSoapBinding.nsmap

$(SRM_V2_2_SOAP_FILES): srm.v2.2.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p srmv2 srm.v2.2.h

srm.v2.2.h: srm.v2.2.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -t $(top_srcdir)/src/typemap-srmv2.dat $< -o $@

# fixed nsmap files
#-------------------------------------------------------------------------------
FIXED_NSMAP_FILES = \
	edg_local_replica_catalogSoapBinding+.nsmap \
	edg_replica_metadata_catalogSoapBinding+.nsmap \
	srmSoapBinding+.nsmap

edg_local_replica_catalogSoapBinding+.nsmap: edg_local_replica_catalogSoapBinding.nsmap
	sed 's/struct Namespace namespaces/struct Namespace namespaces_lrc/' $? > $@

edg_replica_metadata_catalogSoapBinding+.nsmap: edg_replica_metadata_catalogSoapBinding.nsmap
	sed 's/struct Namespace namespaces/struct Namespace namespaces_rmc/' $? > $@

srmSoapBinding+.nsmap: srmSoapBinding.nsmap
	sed 's/struct Namespace namespaces/struct Namespace namespaces_srmv2/' $? > $@

if USE_GSOAP_2_7_9
STDSOAP2_C_FIX=patch -p0 -b stdsoap2.c $(top_srcdir)/src/c/stdsoap2.c.patch
else
STDSOAP2_C_FIX=@echo 'No patch needed for stdsoap2.c'
endif

# Copy gsoap file
stdsoap2.c: 
	cp -f $(GSOAP_LOCATION)/src/$@ $@
	$(STDSOAP2_C_FIX)
	
# Common Files
soapdefs.h:
	echo "//autogenerated file" > $@
	echo "#undef WITH_NOGLOBAL" >> $@
	echo "#undef SOAP_FMAC3" >> $@
	echo "#undef SOAP_FMAC4" >> $@

env.c:
	echo '#include "stdsoap2.h" // autogen' > $@
	echo 'struct Namespace namespaces[] ={{NULL, NULL}}; // autogen' >> $@

#-------------------------------------------------------------------------------
# _PROGRAMS, _LIBRARIES, BUILT_SOURCES...
#-------------------------------------------------------------------------------

# distributed header files
dist_include_HEADERS = \
	gfal_api.h \
	gfal_internals.h \
	gfal_types.h \
	gfal_constants.h

# executables
bin_PROGRAMS = \
    gfal_unittest \
    gfal_test_checksum \
    gfal_version \
	gfal_testchmod \
	gfal_testget \
	gfal_teststat \
	gfal_testcreatdir \
	gfal_testread \
	gfal_testunlink \
	gfal_testdir \
	gfal_testrw

# libraries
lib_LIBRARIES = \
	libgfal.a

# shared libraries
lib_LTLIBRARIES = \
	libgfal.la \
	libgfal_pthr.la 

# generated source files (to build before other programs and libraries)
BUILT_SOURCES = \
	$(EDG_LOCAL_REPLICA_CATALOG_SOAP_FILES) \
	$(EDG_REPLICA_METADATA_CATALOG_SOAP_FILES) \
	$(SRM_V1_1_SOAP_FILES) \
	$(SRM_V2_2_SOAP_FILES) \
	$(FIXED_NSMAP_FILES) \
	gfal_wrap.c \
	gfalthr_wrap.c

# python
pythondir = $(libdir)/python$(PYTHON_VERSION)/site-packages
pkgpythondir = $(pythondir)
pyexecdir = $(libdir)/python$(PYTHON_VERSION)/site-packages
pkgpyexecdir = $(pyexecdir)
pkgpython_PYTHON = gfal.py gfalthr.py
pkgpyexec_LTLIBRARIES = _gfal.la _gfalthr.la

_gfal_la_SOURCES = gfal.i lcg-typemaps.python.i gfal_wrap.c
_gfal_la_LDFLAGS = -module
_gfal_la_CFLAGS = $(PYTHON_CFLAGS)
_gfal_la_LIBADD = libgfal.la

gfal_wrap.c: gfal.i lcg-typemaps.python.i
	SWIG_LIB=$(SWIG_LIB_PATH) $(SWIG) -python -o $@ $<

_gfalthr_la_SOURCES = gfalthr.i gfal.i lcg-typemaps.python.i gfalthr_wrap.c
_gfalthr_la_LDFLAGS = -module
_gfalthr_la_CFLAGS = $(PYTHON_CFLAGS)
_gfalthr_la_LIBADD = libgfal_pthr.la

gfalthr_wrap.c: gfalthr.i lcg-typemaps.python.i
	SWIG_LIB=$(SWIG_LIB_PATH) $(SWIG) -python -o $@ $<


GFAL_SOURCE_FILES = \
    gfal_utils.c \
    stdsoap2.c \
    gfal_test_checksum.c \
	checkprotolib.c \
	gfal.c \
	gfal_checksum.c \
	gfal_file.c \
	gfal_timeouts.c \
	lrc_ifce.c \
	mds_ifce.c \
	rmc_ifce.c \
	sfn_ifce.c \
	srm2_2_ifce.c \
	srm_ifce.c \
	lfc_ifce.c \
	gridftp_ifce.c

lrc_ifce.o: lrc_ifce.c lrcH.h lrcStub.h lrcC.c lrcClient.c edg_local_replica_catalogSoapBinding+.nsmap gfal_api.h
rmc_ifce.o: rmc_ifce.c rmcH.h rmcStub.h rmcC.c rmcClient.c edg_replica_metadata_catalogSoapBinding+.nsmap gfal_api.h
srm2_2_ifce.o: srm2_2_ifce.c srmv2H.h srmv2Stub.h srmSoapBinding+.nsmap gfal_api.h
srm_ifce.o: srm_ifce.c srmH.h srmStub.h ISRM.nsmap gfal_api.h

GFAL_FLAGS = \
	-I$(LFC_LOCATION)/include/lfc \
	-DGFAL_ENABLE_RFIO -I/usr/include/shift -I/usr/local/include/shift -I$(DPM_LOCATION)/include/dpm \
	-DGFAL_ENABLE_DCAP -I$(DCAP_LOCATION)/include \
	-DGFAL_SECURE \
	-fPIC -D_LARGEFILE64_SOURCE \
	-DVERSION=\"$(VERSION)-$(RELEASE)\" \
	$(SOAPCPP2_FLAGS)

# libgfal.a
#-------------------------------------------------------------------------------
libgfal_a_SOURCES = $(GFAL_SOURCE_FILES)

libgfal_a_CFLAGS = \
	$(GLOBUS_NOTHR_CFLAGS) \
	$(GLITE_CFLAGS) \
	$(GFAL_FLAGS) \
	$(GSOAP_CFLAGS) \
	$(CGSI_GSOAP_CFLAGS) \
	$(VOMS_CFLAGS)

# libgfal.la
#-------------------------------------------------------------------------------
libgfal_la_SOURCES = $(GFAL_SOURCE_FILES)

libgfal_la_LIBADD = \
	-luuid -lc -ldl \
	$(CGSI_GSOAP_LIBS) \
	$(GLOBUS_GSS_NOTHR_LIBS) \
	$(GLOBUS_FTP_CLIENT_NOTHR_LIBS) \
	$(VOMS_NOTHR_LIBS) \
	-lldap

libgfal_la_CFLAGS = \
	$(GLOBUS_NOTHR_CFLAGS) \
	$(GLITE_CFLAGS) \
	$(GFAL_FLAGS) \
	$(GSOAP_CFLAGS) \
	$(CGSI_GSOAP_CFLAGS) \
	$(VOMS_CFLAGS)

libgfal_la_LDFLAGS = \
	$(GFAL_FLAGS) \
	-version-info $(INTERFACE_LIBTOOL_CURRENT):$(INTERFACE_LIBTOOL_REVISION):$(INTERFACE_LIBTOOL_AGE)

# libgfal_pthr.la
#-------------------------------------------------------------------------------
libgfal_pthr_la_SOURCES = $(GFAL_SOURCE_FILES)

libgfal_pthr_la_LIBADD = \
	-luuid -lc -ldl \
	$(CGSI_GSOAP_LIBS) \
	$(GLOBUS_GSS_THR_LIBS) \
	$(GLOBUS_FTP_CLIENT_THR_LIBS) \
	$(VOMS_THR_LIBS) \
	-lldap

libgfal_pthr_la_CFLAGS = \
	$(GLOBUS_THR_CFLAGS) \
	$(GLITE_CFLAGS) \
	$(GFAL_FLAGS) \
	$(GSOAP_CFLAGS) \
	$(CGSI_GSOAP_CFLAGS) \
	$(VOMS_CFLAGS)

libgfal_pthr_la_LDFLAGS = \
	$(GFAL_FLAGS) \
	-version-info $(INTERFACE_LIBTOOL_CURRENT):$(INTERFACE_LIBTOOL_REVISION):$(INTERFACE_LIBTOOL_AGE)

# gfal_version
#-------------------------------------------------------------------------------
gfal_version_SOURCES = \
	gfal_version.c

gfal_version_LDADD = libgfal.la

gfal_version_CFLAGS = $(VOMS_CFLAGS) -D_LARGEFILE64_SOURCE

# test programs
#-------------------------------------------------------------------------------
gfal_test_checksum_SOURCES = gfal_test_checksum.c
gfal_test_checksum_LDADD = libgfal.la
gfal_test_checksum_CFLAGS = $(VOMS_CFLAGS)

gfal_testchmod_SOURCES = gfal_testchmod.c
gfal_testchmod_LDADD = libgfal.la
gfal_testchmod_CFLAGS = $(VOMS_CFLAGS)

gfal_testget_SOURCES = gfal_testget.c
gfal_testget_LDADD = libgfal.la
gfal_testget_CFLAGS = $(VOMS_CFLAGS)

gfal_teststat_SOURCES = gfal_teststat.c
gfal_teststat_LDADD = libgfal.la
gfal_teststat_CFLAGS = $(VOMS_CFLAGS)

gfal_testcreatdir_SOURCES = gfal_testcreatdir.c
gfal_testcreatdir_LDADD = libgfal.la
gfal_testcreatdir_CFLAGS = $(VOMS_CFLAGS)

gfal_testread_SOURCES = gfal_testread.c
gfal_testread_LDADD = libgfal.la
gfal_testread_CFLAGS = $(VOMS_CFLAGS)

gfal_testunlink_SOURCES = gfal_testunlink.c
gfal_testunlink_LDADD = libgfal.la
gfal_testunlink_CFLAGS = $(VOMS_CFLAGS)

gfal_testdir_SOURCES = gfal_testdir.c
gfal_testdir_LDADD = libgfal.la
gfal_testdir_CFLAGS = $(VOMS_CFLAGS)

gfal_testrw_SOURCES = gfal_testrw.c
gfal_testrw_LDADD = libgfal.la
gfal_testrw_CFLAGS = $(VOMS_CFLAGS)

gfal_unittest_SOURCES = \
	gfal_unit_testsuite.c \
    gfal_test__mds_ifce.c \
    gfal_test__gfal_strip_string.c \
    gfal_test__srm2_2_ifce.c \
    gfal_test__gfal_add_strings.c \
    gfal_test__gfal_consolidate_multiple_characters.c \
	gfal_test__protocol_list_handling.c \
	gfal_test__gfal_count_elements_of_string_array.c \
	gfal_test__gfal_parseturl.c 

gfal_unittest_LDADD = $(top_builddir)/src/libgfal.la
gfal_unittest_CFLAGS = $(GFAL_FLAGS) $(GSOAP_CFLAGS) $(CGSI_GSOAP_CFLAGS) 

#-------------------------------------------------------------------------------
# DOCUMENTATION
#-------------------------------------------------------------------------------
man3_MANS = \
	gfal_access.man \
	gfal_chmod.man \
	gfal_closedir.man \
	gfal_close.man \
	gfal_creat.man \
	gfal_deletesurls.man \
	gfal_deletesurls_python.man \
	gfal_get_ids.man \
	gfal_get_ids_python.man \
	gfal_get.man \
	gfal_get_python.man \
	gfal_get_results.man \
	gfal_get_results_python.man \
	gfal_getstatus.man \
	gfal_getstatus_python.man \
	gfal_init.man \
	gfal_init_python.man \
	gfal_internal_free.man \
	gfal_internal_free_python.man \
	gfal_lseek.man \
	gfal_ls.man \
	gfal_ls_python.man \
	gfal.man \
	gfal_mkdir.man \
	gfal_opendir.man \
	gfal_open.man \
	gfal_pin.man \
	gfal_pin_python.man \
	gfal_bringonline.man \
	gfal_bringonline_python.man \
	gfal_prestage.man \
	gfal_prestage_python.man \
	gfal_prestagestatus.man \
	gfal_prestagestatus_python.man \
	gfal_python.man \
	gfal_readdir.man \
	gfal_read.man \
	gfal_release.man \
	gfal_release_python.man \
	gfal_rename.man \
	gfal_request_new.man \
	gfal_rmdir.man \
	gfal_set_xfer_done.man \
	gfal_set_xfer_done_python.man \
	gfal_set_xfer_running.man \
	gfal_set_xfer_running_python.man \
	gfal_stat.man \
	gfal_turlsfromsurls.man \
	gfal_turlsfromsurls_python.man \
	gfal_unlink.man \
	gfal_write.man \
    gfal_access_python.man \
    gfal_chmod_python.man \
    gfal_close_python.man \
    gfal_closedir_python.man \
    gfal_creat_python.man \
    gfal_get_errno_python.man \
    gfal_get_timeout_bdii.man \
    gfal_get_timeout_bdii_python.man \
    gfal_get_timeout_connect.man \
    gfal_get_timeout_connect_python.man \
    gfal_get_timeout_sendreceive.man \
    gfal_get_timeout_sendreceive_python.man \
    gfal_get_timeout_srm.man \
    gfal_get_timeout_srm_python.man \
    gfal_lseek_python.man \
    gfal_mkdir_python.man \
    gfal_open_python.man \
    gfal_opendir_python.man \
    gfal_read_python.man \
    gfal_rename_python.man \
    gfal_rmdir_python.man \
    gfal_set_timeout_bdii.man \
    gfal_set_timeout_bdii_python.man \
    gfal_set_timeout_connect.man \
    gfal_set_timeout_connect_python.man \
    gfal_set_timeout_sendreceive.man \
    gfal_set_timeout_sendreceive_python.man \
    gfal_set_timeout_srm.man \
    gfal_set_timeout_srm_python.man \
    gfal_set_verbose.man \
    gfal_set_verbose_python.man \
    gfal_stat_python.man \
    gfal_unlink_python.man \
    gfal_write_python.man \
	gfal_abortfiles.man \
	gfal_abortfiles_python.man \
	gfal_abortrequest.man \
	gfal_abortrequest_python.man
